fixes weixin share on the last page for kol_pk, one more z-index removal

--- a/app/assets/stylesheets/kol_pk/style.css.scss
+++ b/app/assets/stylesheets/kol_pk/style.css.scss
@@ -258,7 +258,6 @@ section{
 }
 .vs-wrap .headshot{
 	position: relative;
-	z-index: 1;
     display: block;
     float: left;
     height: 1.2rem;
